Grid Layout Added Sorted all File Names

--- a/app/src/main/res/layout/activity_Hungry_Fox.xml
+++ b/app/src/main/res/layout/activity_Hungry_Fox.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:orientation="vertical"
-    android:layout_margin="10dp"
+    android:layout_margin="2dp"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".HungryFox">
 
 
     <LinearLayout
@@ -41,7 +41,6 @@
         android:layout_height="0dp"
         android:orientation="vertical"
         android:layout_weight="1"
-        android:layout_margin="5dp"
         android:gravity="center"
         >
 
