HomeLayout Changed Fonts Updated Colors Updated

--- a/app/src/main/res/layout/activity_hungry_fox.xml
+++ b/app/src/main/res/layout/activity_hungry_fox.xml
@@ -44,18 +44,42 @@
         android:gravity="center"
         >
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/Buttonspeak"
-            android:text="Speak"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:gravity="center"
+            android:layout_height="wrap_content">
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/buttonstop"
-            android:text="Stop"
-            />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/Buttonspeak"
+                android:text="Speak"/>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/buttonstop"
+                android:text="Stop"
+                />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+
+            <VideoView
+                android:id="@+id/HungryVideoView"
+                android:layout_gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#FFF"/>
+
+        </LinearLayout>
+
+
 
 
 
