HomeLayout Updated Buttons Added Dot Indicator Added

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,6 @@
     <color name="dark_gray">#6c6c6c</color>
     <color name="green">#00bfa5</color>
     <color name="pink">#ff4081</color>
+    <color name="white">#fff</color>
 
 </resources>
