--- a/app/src/main/res/layout/activity_hungry_fox.xml
+++ b/app/src/main/res/layout/activity_hungry_fox.xml
@@ -2,68 +2,64 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:layout_margin="2dp"
     android:layout_height="match_parent"
+    android:layout_margin="2dp"
+    android:orientation="vertical"
     tools:context=".HungryFox">
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:orientation="vertical"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:orientation="vertical">
 
         <TextView
-            android:gravity="center"
-            android:textSize="27sp"
-            android:fontFamily="@font/gelasio_bolditalic"
             android:id="@+id/textview"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="70"
+            android:fontFamily="@font/gelasio_bolditalic"
+            android:gravity="center"
             android:text="Hello World!"
-            />
+            android:textSize="27sp" />
 
         <TextView
             android:id="@+id/TextWord"
-            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="30"
             android:fontFamily="@font/gelasio_italic"
+            android:gravity="center"
             android:textSize="25sp" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:orientation="vertical"
         android:layout_weight="1"
         android:gravity="center"
-        >
+        android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:gravity="center"
             style="?android:attr/buttonBarStyle"
-            android:layout_height="wrap_content">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center">
 
             <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:id="@+id/Buttonspeak"
-
                 style="?android:attr/buttonBarButtonStyle"
-                android:text="Speak"/>
-
-            <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                style="?android:attr/buttonBarButtonStyle"
+                android:text="Speak" />
+
+            <Button
                 android:id="@+id/buttonstop"
-                android:text="Stop"
-                />
+                style="?android:attr/buttonBarButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Stop" />
 
 
         </LinearLayout>
@@ -72,23 +68,15 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-
             <pl.droidsonroids.gif.GifImageView
                 android:id="@+id/SignImage"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:padding="2dp"/>
-
-
-
-
+                android:padding="2dp" />
 
 
         </LinearLayout>
-
-
-
 
 
     </LinearLayout>
