Alphabetize the words and converting into sign lang.

--- a/app/src/main/res/menu/speedmeter.xml
+++ b/app/src/main/res/menu/speedmeter.xml
@@ -6,10 +6,12 @@
     <item android:id="@+id/item1"
         android:title="Speed"
         android:icon="@drawable/ic_speed"
-        app:showAsAction="ifRoom"
+        app:showAsAction="always"
 
         >
         <menu>
+
+
 
             <item
                 android:id="@+id/Slow"
