--- a/app/src/main/res/layout/activity_hungry_fox.xml
+++ b/app/src/main/res/layout/activity_hungry_fox.xml
@@ -24,11 +24,22 @@
             android:text="Hello World!"
             android:textSize="27sp" />
 
+
+        <TextView
+            android:id="@+id/alphbetView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:fontFamily="@font/gelasio_italic"
+            android:gravity="center"
+            android:textSize="25sp"
+            android:layout_weight="10"/>
+
+
         <TextView
             android:id="@+id/TextWord"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="30"
+            android:layout_weight="20"
             android:fontFamily="@font/gelasio_italic"
             android:gravity="center"
             android:textSize="25sp" />
