Age Group Selection is Added Changes in UI design Performance Improved

--- a/app/src/main/res/layout/activity_hungry_fox.xml
+++ b/app/src/main/res/layout/activity_hungry_fox.xml
@@ -11,7 +11,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_weight="40"
         android:orientation="vertical">
 
         <TextView
@@ -40,11 +40,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_weight="60"
         android:gravity="center"
         android:orientation="vertical">
 
         <LinearLayout
+            android:id="@+id/Button_Layout"
             style="?android:attr/buttonBarStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
