--- a/app/src/main/res/layout/slide.xml
+++ b/app/src/main/res/layout/slide.xml
@@ -21,6 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="title"
+        android:gravity="center_horizontal"
         android:textSize="33sp"
         android:textStyle="bold"
         android:layout_marginTop="30dp"
