--- a/app/src/main/res/layout/slide.xml
+++ b/app/src/main/res/layout/slide.xml
@@ -1,61 +1,114 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/slideLinearLayout"
     android:layout_width="match_parent"
-    android:gravity="center"
-    android:orientation="vertical"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#fcfcfc">
 
-    <ImageView
-        android:id="@+id/slideImg"
-        android:layout_width="220dp"
-        android:focusable="true"
-        android:scaleType="centerCrop"
-        android:layout_height="220dp"
-        />
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appbar"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:fitsSystemWindows="true"
+        >
 
-    <TextView
-        android:fontFamily="@font/oswald_bold"
-        android:textColor="#fff"
-        android:id="@+id/TxtTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="title"
-        android:gravity="center_horizontal"
-        android:textSize="33sp"
-        android:textStyle="bold"
-        android:layout_marginTop="30dp"
-        />
+        <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:id="@+id/collapsingtoolbar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:contentScrim="?attr/colorPrimary"
+            android:fitsSystemWindows="true"
+            app:layout_scrollFlags="exitUntilCollapsed|scroll"
+            >
 
-    <TextView
-        android:textColor="#000"
-        android:id="@+id/textDesc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:padding="10dp"
-        android:fontFamily="@font/oswald_regular"
-        android:text="Description"
-        android:layout_marginTop="5dp"
-        android:textAlignment="center"
-        />
+            <pl.droidsonroids.gif.GifImageView
+                android:id="@+id/SlideGif"
+                app:layout_collapseMode="parallax"
 
-
-    <Button
-        android:id="@+id/btnOrder"
-        android:text="Read Now!"
-        android:clickable="true"
-        android:focusable="true"
-        android:elevation="30dp"
-        android:textColor="#fff"
-        android:background="@drawable/round"
-        android:paddingStart="30dp"
-        android:paddingEnd="20dp"
-        android:layout_marginTop="25dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+                android:contentDescription="@string/app_name"
+                android:scaleType="centerCrop"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"/>
 
 
 
 
-</LinearLayout>
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:layout_gravity="center"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:layout_marginTop="50dp"
+                android:id="@+id/slideImg"
+                android:layout_width="220dp"
+                android:focusable="true"
+                android:scaleType="centerCrop"
+                android:layout_height="220dp"
+                />
+
+            <TextView
+                android:fontFamily="@font/oswald_bold"
+                android:textColor="#fff"
+                android:id="@+id/TxtTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="title"
+                android:gravity="center_horizontal"
+                android:textSize="33sp"
+                android:textStyle="bold"
+                android:layout_marginTop="30dp"
+                />
+
+            <TextView
+                android:textColor="#000"
+                android:id="@+id/textDesc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:padding="10dp"
+                android:fontFamily="@font/oswald_regular"
+                android:text="Description"
+                android:layout_marginTop="5dp"
+                android:textAlignment="center"
+                />
+
+
+            <Button
+                android:id="@+id/btnOrder"
+                android:text="Read Now!"
+                android:clickable="true"
+                android:focusable="true"
+                android:elevation="30dp"
+                android:textColor="#fff"
+                android:background="@drawable/round"
+                android:paddingStart="30dp"
+                android:paddingEnd="20dp"
+                android:layout_marginTop="40dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+
+
+
+        </LinearLayout>
+
+
+
+    </androidx.core.widget.NestedScrollView>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
