--- a/app/src/main/res/layout/activity_greedy_lion.xml
+++ b/app/src/main/res/layout/activity_greedy_lion.xml
@@ -32,7 +32,7 @@
             android:layout_height="0dp"
             android:layout_weight="30"
             android:fontFamily="@font/gelasio_italic"
-            android:textSize="25dp" />
+            android:textSize="25sp" />
     </LinearLayout>
 
     <LinearLayout
@@ -46,21 +46,24 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:gravity="center"
+            style="?android:attr/buttonBarStyle"
             android:layout_height="wrap_content">
 
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/Greedy_Button_speak"
-                android:text="Speak"
-                android:layout_marginRight="10dp"/>
+                android:text="@string/speak"
+                style="?android:attr/buttonBarButtonStyle"
+                android:layout_marginEnd="10dp"/>
 
             <Button
+                style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/Greedy_button_stop"
-                android:layout_marginLeft="10dp"
-                android:text="Stop"
+                android:layout_marginStart="10dp"
+                android:text="@string/stop"
                 />
 
 
