--- a/app/src/main/res/layout/activity_splashscreen.xml
+++ b/app/src/main/res/layout/activity_splashscreen.xml
@@ -21,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:gravity="center"
+        android:gravity="center_horizontal"
         android:orientation="horizontal"
         android:padding="15dp">
 
@@ -30,8 +30,8 @@
             android:id="@+id/Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
-            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="25dp"
+            android:layout_marginEnd="10dp"
             android:fontFamily="@font/gelasio_regular"
             android:text="@string/kahani"
             android:textColor="#1b262c"
