--- a/app/src/main/res/drawable/greedy_lion_gradient.xml
+++ b/app/src/main/res/drawable/greedy_lion_gradient.xml
@@ -2,10 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
 
     <gradient
-        android:angle="180"
-        android:centerColor="#26C986"
-        android:endColor="#109F8D"
-        android:startColor="#36ED81"
+        android:angle="0"
+        android:endColor="#edde5d"
+        android:startColor="#f09819"
         android:type="linear" />
 
 </shape>
