--- a/app/src/main/res/drawable/cat_dog_gradient.xml
+++ b/app/src/main/res/drawable/cat_dog_gradient.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
 
     <gradient
-        android:angle="180"
-        android:endColor="#109F8D"
-        android:startColor="#36ED81"
+        android:angle="90"
+        android:endColor="#a83279"
+        android:startColor="#d38312"
         android:type="linear" />
 
 </shape>
