--- a/app/src/main/res/layout/activity_adult__group.xml
+++ b/app/src/main/res/layout/activity_adult__group.xml
@@ -13,6 +13,8 @@
         android:clipToPadding="false"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+
     </androidx.viewpager.widget.ViewPager>
 
 
@@ -20,9 +22,19 @@
         android:orientation="horizontal"
         android:id="@+id/Adult_Grouplayout_dots"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
+       android:layout_centerInParent="true"
         android:layout_width="wrap_content"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="15dp"
         android:layout_height="wrap_content"/>
+
+    <ImageButton
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:background="@drawable/next_btn_black"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin= "20dp"
+        android:src="@drawable/ic_arrow_forward" />
+
 
 </RelativeLayout>
