--- a/app/src/main/res/layout/slide.xml
+++ b/app/src/main/res/layout/slide.xml
@@ -9,13 +9,13 @@
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="250dp"
         android:fitsSystemWindows="true">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/collapsingtoolbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="250dp"
             android:fitsSystemWindows="true"
             app:contentScrim="?attr/colorPrimary"
             app:layout_scrollFlags="exitUntilCollapsed|scroll">
@@ -23,7 +23,7 @@
             <pl.droidsonroids.gif.GifImageView
                 android:id="@+id/SlideGif"
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
+                android:layout_height="250dp"
                 android:contentDescription="@string/app_name"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax" />
@@ -64,7 +64,7 @@
                 android:layout_marginTop="30dp"
                 android:fontFamily="@font/oswald_bold"
                 android:gravity="center_horizontal"
-                android:text="title"
+                android:text="@string/title"
                 android:textColor="#fff"
                 android:textSize="33sp"
                 android:textStyle="bold" />
