--- a/app/src/main/res/layout/activity_black__sheep.xml
+++ b/app/src/main/res/layout/activity_black__sheep.xml
@@ -24,13 +24,11 @@
             android:textSize="27sp" />
 
 
-
-
         <TextView
             android:id="@+id/Black_Sheep_Word"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="20"
+            android:layout_weight="30"
             android:fontFamily="@font/gelasio_italic"
             android:gravity="center"
             android:textSize="25sp" />
@@ -55,14 +53,14 @@
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Speak" />
+                android:text="@string/speak" />
 
             <Button
                 android:id="@+id/Black_Sheep_button_stop"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Stop" />
+                android:text="@string/stop" />
 
 
         </LinearLayout>
