--- a/app/src/main/res/layout/activity_wise__owl.xml
+++ b/app/src/main/res/layout/activity_wise__owl.xml
@@ -31,7 +31,7 @@
             android:id="@+id/owl_TextWord"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="20"
+            android:layout_weight="30"
             android:fontFamily="@font/gelasio_italic"
             android:gravity="center"
             android:textSize="25sp" />
@@ -56,14 +56,14 @@
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Speak" />
+                android:text="@string/speak" />
 
             <Button
                 android:id="@+id/owl_button_stop"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Stop" />
+                android:text="@string/stop" />
 
 
         </LinearLayout>
