Dot Indicator is Changed Stop words updated New Sign Added

--- a/app/src/main/res/layout/activity_age_selection.xml
+++ b/app/src/main/res/layout/activity_age_selection.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fff"
@@ -30,7 +31,7 @@
     </androidx.viewpager.widget.ViewPager>
 
 
-    <LinearLayout
+    <!--<LinearLayout
         android:id="@+id/Age_selection_layout_dots"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -38,7 +39,23 @@
         android:layout_centerInParent="true"
         android:layout_marginBottom="20dp"
         android:gravity="center"
-        android:orientation="horizontal" />
+        android:orientation="horizontal" />-->
+
+    <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
+        android:id="@+id/Age_selection_layout_dots"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:dotsColor="@color/red"
+        app:dotsCornerRadius="8dp"
+        app:dotsSize="12dp"
+        app:dotsSpacing="4dp"
+        app:dotsWidthFactor="2.5"
+        app:selectedDotColor="@color/red"
+        app:progressMode="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="20dp"
+        />
 
     <ImageButton
         android:layout_width="40dp"
