--- a/app/src/main/res/layout/activity_mid__age__group.xml
+++ b/app/src/main/res/layout/activity_mid__age__group.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Mid_Age_Group">
@@ -17,14 +18,22 @@
     </androidx.viewpager.widget.ViewPager>
 
 
-    <LinearLayout
-        android:orientation="horizontal"
+
+    <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
         android:id="@+id/Mid_Age_layout_dots"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:dotsColor="@color/black"
+        app:dotsCornerRadius="8dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
+        app:dotsSize="12dp"
+        app:dotsSpacing="4dp"
         android:layout_marginBottom="15dp"
-        android:layout_height="wrap_content"/>
+        app:dotsWidthFactor="2.5"
+        app:selectedDotColor="@color/black"
+        app:progressMode="true"
+        />
 
     <ImageButton
         android:layout_width="40dp"
