Arrow Function is Added

--- a/app/src/main/res/layout/activity_age_selection.xml
+++ b/app/src/main/res/layout/activity_age_selection.xml
@@ -58,6 +58,7 @@
         />
 
     <ImageButton
+        android:id="@+id/Age_selection_arrow"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:background="@drawable/nxtbtn_red"
