--- a/app/src/main/res/layout/activity_adult__group.xml
+++ b/app/src/main/res/layout/activity_adult__group.xml
@@ -39,6 +39,7 @@
 
 
     <ImageButton
+        android:id="@+id/Adult_arrow"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:background="@drawable/next_btn_black"
